objects/gcga__Gift_Aid_Plugin__mdt.object
<CustomObject>
    <description>Gift Aid Plugins allow insertion of local Apex logic into the managed package logic</description>
    <fields>
        <fullName>gcga__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field determines whether the Gift Aid Plugin is active. If unchecked, the logic will not run.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gcga__Class__c</fullName>
        <inlineHelpText>The name of the Apex class which contains the plugin logic</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcga__Namespace__c</fullName>
        <inlineHelpText>The namespace for the Apex plugin code. Leave empty for local classes.</inlineHelpText>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcga__Plugin_Key__c</fullName>
        <inlineHelpText>This field references the plugin key specified in the Gift Aid plugins class and drives at which point in the managed package the custom Apex logic will run.</inlineHelpText>
        <label>Plugin Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Gift Aid Plugin</label>
    <pluralLabel>Gift Aid Plugins</pluralLabel>
</CustomObject>